[package]
name = "duat-catppuccin"
version = "0.1.0"
edition = "2024"
authors = ["AhoyISki"]
description = "The Catppuccin colorschemes for the Duat text editor"
homepage = "https://github.com/AhoyISki/duat-catppuccin"
license = "AGPL-3.0-or-later"
readme = "README.md"
keywords = ["colorscheme", "duat", "plugin"]
categories = ["command-line-utilities", "text-editors", "config"]

[features]
default = ["normal-deps"]
__local-deps = ["dep:local-duat-core"]
normal-deps = ["dep:duat-core"]

[dependencies]

[dependencies.local-duat-core]
version = "0.3.0"
path = "../duat/duat-core/"
package = "duat-core"
optional = true

[dependencies.duat-core]
version = "0.3.0"
git = "https://github.com/AhoyISki/duat"
optional = true
