[package]
name = "duat-catppuccin"
version = "0.1.0"
edition = "2024"
authors = ["AhoyISki"]
description = "The Catppuccin colorschemes for the Duat text editor"
homepage = "https://github.com/AhoyISki/duat-catppuccin"
license = "AGPL-3.0-or-later"
readme = "README.md"
keywords = ["colorscheme", "duat", "plugin"]
categories = ["command-line-utilities", "text-editors", "config"]

[dependencies]
# Just a heads up, this dependency, along with the duat
# submodule, exist only because I (AhoyISki) need to work on
# plugins, duat, and duat-core all at the same time, so depending
# a git path would not work supper well, as i'd constantly have
# to update the dependencies.
# For your own plugins, you can stick with a git source.
duat-core = { version = "0.3.0", path = "duat/duat-core/" }
