[package]
name = "duat-catppuccin"
version = "0.1.0"
edition = "2024"
authors = ["AhoyISki"]
description = "The Catppuccin colorschemes for the Duat text editor"
homepage = "https://github.com/AhoyISki/duat-catppuccin"
license = "AGPL-3.0-or-later"
readme = "README.md"
keywords = ["colorscheme", "duat", "plugin"]
categories = ["command-line-utilities", "text-editors", "config"]

[dependencies]
# This dependency is taken as a submodule in order to allow
# me (AhoyISki) to edit duat and duat-core while also editing
# plugins at the same time, while still allowing for git
# dependencies when installing duat with the git-deps feature.
# If you are creating a plugin, you don't need to do this, just
# source duat-core from the repository if you want.
duat-core = { version = "0.3.0", path = "duat/duat-core/" }
